--- a/color.css
+++ b/color.css
@@ -6,10 +6,10 @@
 }*/
 .root {
      -fx-background-image: url("grey-background-for-site11.jpg");
-     
+     -fx-font-family: "Helvetica";
 }
-Button  {
-    
+.button  {
+    -fx-font-family: "Helvetica";
     
     -fx-background-color: 
         linear-gradient(#f2f2f2, #d6d6d6),
@@ -21,7 +21,7 @@ Button  {
 }
 
 ChoiceBox {
-    
+    -fx-font-family: "Helvetica";
     -fx-background-color: 
         linear-gradient(#f2f2f2, #d6d6d6),
         linear-gradient(#fcfcfc 0%, #d9d9d9 20%, #d6d6d6 100%),
@@ -31,7 +31,7 @@ ChoiceBox {
     -fx-text-fill: black;
 }
 ComboBox {
-    
+    -fx-font-family: "Helvetica";
     -fx-background-color: 
         linear-gradient(#f2f2f2, #d6d6d6),
         linear-gradient(#fcfcfc 0%, #d9d9d9 20%, #d6d6d6 100%),
@@ -41,7 +41,7 @@ ComboBox {
     -fx-text-fill: black;
 }
 ListView {
-    
+    -fx-font-family: "Helvetica";
     -fx-background-color: 
         linear-gradient(#f2f2f2, #d6d6d6),
         linear-gradient(#fcfcfc 0%, #d9d9d9 20%, #d6d6d6 100%),
@@ -51,12 +51,21 @@ ListView {
     -fx-text-fill: black;
 }
 Label {
+    -fx-font-family: "Helvetica";
+    -fx-font-weight: bold;
     
 } 
-ListView{
-    -fx-font-family: "monospace";
+TextField{
+    -fx-font-family: "Helvetica";
 }
-.action {
-    -fx-background-color: red;
+.button:pressed{
+    -fx-background-color: rgba(180,180,180,0.7);
 }
-
+.action{
+    -fx-font-family: "Helvetica";
+    -fx-background-color: 
+        orangered;
+    -fx-background-radius: 8,7,6;
+    -fx-background-insets: 0,1,2;
+    -fx-text-fill: black;
+}
